# PrismKV

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  design.md  pyproject.toml  requirements.txt  setup_cuda.py
.github/workflows/: ci.yml  publish.yml
examples/: adaptive_demo.py  demo.py  hf_integration.py  rag_demo.py  usurper_rag_demo.py
results/: benchmark_gpt2.json  benchmark_gpt2_notes.md  benchmark_latest.json  bit_split_search.json  validation_report.json
scripts/: build_codebooks.py  collect_kv_calibration.py  find_optimal_bit_split.py  run_e2e_benchmark.py  run_sidecar.py  run_validation.py
src/prismkv/: __init__.py  sidecar.py  utils.py
src/prismkv/cache/: __init__.py  backend.py  cache_config.py  cache_store.py  dim_aligner.py  kv_cache.py  raw_cache.py  vllm_adapter.py
src/prismkv/cuda/: __init__.py  polar_attn_kernel.cu  prismkv_cuda.cpp
src/prismkv/eval/: __init__.py  attention_entropy.py  benchmark.py  e2e_benchmark.py  kv_collector.py  model_arch.py
src/prismkv/quantizer/: __init__.py  baseline_2d.py  bias_correction.py  bit_alloc.py  learned_codebook.py  lloyd_max.py  polar_attention.py  stacked_plane.py
tests/: test_bias_correction.py  test_bit_alloc.py  test_calibration_quality.py  test_cuda_kernel.py  test_e2e_benchmark.py  test_kv_cache.py  test_kv_collector.py  test_learned_codebooks.py  test_m10_persistence.py  test_m12_framework_agnostic.py  test_model_arch.py  test_polar_attention.py  test_quantizer.py  test_rag_adapters.py  test_rag_engine.py  test_rag_ingestion.py  test_real_data_validation.py
(+9 files in other folders)
