[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismkv"
version = "0.6.0"
description = "3-D Stacked-Plane KV Cache Quantizer — defensive prior art publication"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Dan Hicks", email = "danhicks96@users.noreply.github.com"}]
keywords = ["kv-cache", "quantization", "llm", "transformer", "compression", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "scipy>=1.12.0",
]
eval = [
    "transformers>=4.36.0",
    "accelerate>=0.26.0",
]
cache = [
    "transformers>=4.36.0",
]
rag = [
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/danhicks96/PrismKV"
Repository = "https://github.com/danhicks96/PrismKV"

[tool.setuptools.packages.find]
where = ["src"]
